kubernetes-labs/lab-22-istio-virtualservice-routing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-22-routing
  labels:
    istio-injection: enabled
